--- a/package.json
+++ b/package.json
@@ -3,51 +3,18 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0",
-    "axios": "^1.4.0",
-    "socket.io-client": "^4.6.1",
-    "react-query": "^3.39.3",
-    "zustand": "^4.4.0",
-    "date-fns": "^2.30.0",
-    "react-hook-form": "^7.45.0",
-    "zod": "^3.21.4",
-    "clsx": "^1.2.1",
-    "react-markdown": "^8.0.7",
-    "react-syntax-highlighter": "^15.5.0",
-    "emoji-picker-react": "^4.4.9",
-    "react-dropzone": "^14.2.3",
-    "react-intersection-observer": "^9.5.2",
-    "react-hot-toast": "^2.4.1",
-    "react-helmet-async": "^2.0.3",
-    "lucide-react": "^0.263.1",
-    "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-dialog": "^1.0.4",
-    "@radix-ui/react-dropdown-menu": "^2.0.5",
-    "@radix-ui/react-tabs": "^1.0.4",
-    "@radix-ui/react-tooltip": "^1.0.6",
-    "@radix-ui/react-toast": "^1.1.4"
+    "next": "14.0.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "autoprefixer": "^10.4.14",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.0",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.0.2",
-    "vite": "^4.4.5"
+    "eslint": "^8.53.0",
+    "eslint-config-next": "14.0.3"
   }
 }
